added sounds, and changed some texts

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -67,6 +67,8 @@ ul li {
   margin-top: 30px;
   margin-bottom: 10px;
   border: none;
+  background-color: #5dad52;
+  color: white;
 }
 
 .tile {
@@ -123,3 +125,6 @@ ul li {
     border: none;
   }
 
+
+
+ 
