--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -86,7 +86,7 @@ ul li {
   }
   
   .container {
-      background-image: url("/assets/images/macbook2.png");
+      background-image: url("/assets/images/macbook.png");
       background-repeat: no-repeat;
       background-position: 50% -40%;
       background-size: cover;
