--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,8 +87,9 @@ ul li {
   
   .container {
       background-image: url("../images/macbook.png");
+      position: fixed;
       background-repeat: no-repeat;
-      background-position: 50% -40%;
+      background-position: 50% -50%;
       background-size: cover;
   }
 
