--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,9 +87,14 @@ ul li {
   
   .container {
       background-image: url("../images/macbook.png");
-      position: fixed;
+      position:absolute;
+      top: 50%;
+      left: 50%;
+      width:100em;
+      height:50em;
+      margin-top: -25em; /*set to a negative number 1/2 of your height*/
+      margin-left: -50em; /*set to a negative number 1/2 of your width*/
       background-repeat: no-repeat;
-      background-position: 50% -50%;
       background-size: cover;
   }
 
