--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -87,12 +87,8 @@ ul li {
   
   .container {
       background-image: url("../images/macbook.png");
-      position:absolute;
-      top: 50%;
-      left: 50%;
-      width:100em;
-      height:50em;
       background-repeat: no-repeat;
+      background-position: 50% -40%;
       background-size: cover;
   }
 
